@@ -13,6 +13,12 @@ TABLE.portlet TD.body {
   padding-left: 2px
 }
 
+TD.body A.selected {
+  color: #989898;
+  background-color: yellow;
+  font-weight: bold;
+}
+
 TABLE.portlet-content
 {
   font-size: smaller;
