@@ -13,7 +13,7 @@
 <p>At the bottom of the page is a drop down list for adding new content to this page.
 
 <p>The content is provided by other pages within the application.  However, the content
-doesn't have to be simple HTML ... it can components, even Tapestry forms and links.
+doesn't have to be simple HTML ... it can be Tapestry components, even forms and links.
 
 <p>Each "Portlet" can be maximized (showing its content) 
 or minimized (showing just its title) independently, using the bar/box icon in the
