@@ -1,6 +1,0 @@
-<jwc id="content">
-
-TV Portlet content.
-
-</jwc>
-
