@@ -1,6 +1,12 @@
 <jwc id="content">
 
-Weather Portlet content.
+<jwc id="weekday">Weekday Weather</jwc>
+|
+<jwc id="weekend">Weekend Weather</jwc>
+
+<p>
+
+<jwc id="insertForecast"/>
 
 </jwc>
 
