@@ -1,3 +1,8 @@
+* May 29 2001 hship
+
+Portal tutorial:
+- Add a hokey "Weather" portlet (to demonstration Direct components in a portlet).
+
 * May 28 2001 hship
 
 Portal tutorial:
